cmake_minimum_required(VERSION 3.5)

PROJECT(lover_pro)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} DIR_SRCS)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/my_timer DIR_TIMER)

SET(PRO_PATH ${DIR_SRCS} ${DIR_TIMER})

ADD_EXECUTABLE(lover_pro ${PRO_PATH})

TARGET_LINK_LIBRARIES(lover_pro m pthread)
